# clipper2-rust

./: .gitignore  CLAUDE.md  Cargo.toml  HOW_WE_PORTED_CLIPPER2.md  IMPLEMENTATION_CHECKLIST.md  PROJECT_STATUS.md  QUICK_START.md  README.md  add_dependencies_to_db.py  check_rectclip_deps.py  clipper2_analysis.db-journal  clipper2_complete.db  clipper2_full_rust_port.plan.md  clipper2_simple.db  complete_analyzer.py  dependency_analysis.json  dependency_analyzer.py  dependency_helper.py  enhanced_dependency_helper.py  function_verifier.py  implementation_order.txt  mark_core_complete.py  package.json  query_functions.py  rectclip_missing_analysis.py  search_all_deps.py  simple_analyzer.py  update_core_progress.py  update_progress.py
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  fix-test-failures.md  rust-expert.md  test-writer.md
.github/workflows/: deploy-demo.yml
CPP/: CLAUDE.md
Tests/: file_length_validation.rs  test_cpp_core.rs  test_cpp_lines.rs  test_cpp_offsets.rs  test_cpp_polygons.rs  test_cpp_polytree.rs  test_cpp_random_paths.rs  test_cpp_rectclip.rs
benches/: clipper_bench.rs
demo/: build-wasm.ps1  build-wasm.sh  build.ts  dev.ts  index.html  package.json  server.ts
demo/src/: canvas.ts  code-display.ts  controls.ts  main.ts  persist.ts  wasm.ts
examples/: benchmark_cli.rs  inflate_paths.rs  rect_clipping.rs  simple_clipping.rs
scripts/: pre-commit-check.ps1  pre-commit-check.sh
src/: clipper.rs  clipper_tests.rs  core.rs  core_tests.rs  engine.rs  engine_fns.rs  engine_public.rs  engine_tests.rs  lib.rs  minkowski.rs  minkowski_tests.rs  offset.rs  offset_tests.rs  rectclip.rs  rectclip_tests.rs  version.rs
(+19 files in other folders)
