[workspace]
members = [".", "demo/wasm"]

[package]
name = "clipper2-rust"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["Lars Brubaker <larsbrubaker@matterhackers.com>"]
description = "Pure Rust port of the Clipper2 polygon clipping and offsetting library"
license = "BSL-1.0"
repository = "https://github.com/larsbrubaker/clipper2-rust"
homepage = "https://larsbrubaker.github.io/clipper2-rust/"
documentation = "https://docs.rs/clipper2-rust/"
readme = "README.md"
keywords = ["polygon", "clipping", "geometry", "offsetting", "2d"]
categories = ["algorithms", "graphics", "mathematics"]
exclude = ["demo/", "docs/", "Tests/", ".github/", ".claude/", "benches/", "scripts/", "CLAUDE.md", "nul"]

[lib]
name = "clipper2_rust"
path = "src/lib.rs"

[dependencies]
# Core dependencies for mathematical operations
num-traits = "0.2"

[dev-dependencies]
# Testing framework
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "clipper_bench"
harness = false
